.repos/effect-tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_callExpression.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_callExpression.ts(23,1): error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
/.src/missingEffectContext_callExpression.ts(23,8): error TS377004: Missing context ServiceA | ServiceB | ServiceC in the expected Effect type. effect(missingEffectContext)
/.src/missingEffectContext_callExpression.ts(30,1): error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
/.src/missingEffectContext_callExpression.ts(30,21): error TS377004: Missing context ServiceC in the expected Effect type. effect(missingEffectContext)


==== /.src/missingEffectContext_callExpression.ts (4 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    class ServiceB extends Effect.Service<ServiceB>()("ServiceB", {
      succeed: { a: 2 }
    }) {}
    
    class ServiceC extends Effect.Service<ServiceC>()("ServiceC", {
      succeed: { a: 3 }
    }) {}
    
    declare const effectWithServices: Effect.Effect<number, never, ServiceA | ServiceB | ServiceC>
    
    function testFn(effect: Effect.Effect<number>) {
      return effect
    }
    
    // @ts-expect-error
    testFn(effectWithServices)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
           ~~~~~~~~~~~~~~~~~~
!!! error TS377004: Missing context ServiceA | ServiceB | ServiceC in the expected Effect type. effect(missingEffectContext)
    
    function testFnWithServiceAB(effect: Effect.Effect<number, never, ServiceA | ServiceB>) {
      return effect
    }
    
    // @ts-expect-error
    testFnWithServiceAB(effectWithServices)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
                        ~~~~~~~~~~~~~~~~~~
!!! error TS377004: Missing context ServiceC in the expected Effect type. effect(missingEffectContext)
    
